--- a/index.html
+++ b/index.html
@@ -5,11 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Homepage Replica</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <ul class="nav">
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li id="signin"><a href="#">Sign in</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="main">
+            <div>
+                <img src="googlelogo_color_272x92dp.png" alt="" Google logo>
+            </div>
+            <div>
+                <input type="text" class="search">
+            </div>
+            <div class="button">
+                <button>Google Search</button>
+                <button>I'm feeling lucky</button>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <ul>
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">How Search Works</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Setting</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
