Update HTML, CSS

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                 <button>I'm feeling lucky</button>
             </div>
         </div>
+        <footer>
+            <div class="footer">
+                <ul class="footer1">
+                    <li><a href="#">Advertising</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">How Search Works</a></li>
+                </ul>
+                <ul class="footer2">
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Setting</a></li>
+                </ul>
+            </div>
+        </footer>
     </main>
-    <footer>
-        <div class="footer">
-            <ul>
-                <li><a href="#">Advertising</a></li>
-                <li><a href="#">Business</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">How Search Works</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Setting</a></li>
-            </ul>
-        </div>
-    </footer>
 </body>
 
 </html>
